--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_getDriverFileView.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_getDriverFileView.form
@@ -84,6 +84,10 @@
                 <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
                 <dync:children/>
               </dync:attribute>
+              <dync:attribute default="true" group="表格设置" id="multiselect" name="多选" value="false">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
             </form:attributes>
           </form:control>
           <form:child xsi:type="form:Group" id="toolbar_table1" name="toolbar_table">
