--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_shipperInfoEdit_dlg.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_shipperInfoEdit_dlg.form
@@ -601,6 +601,10 @@
                 <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
                 <dync:children/>
               </dync:attribute>
+              <dync:attribute default="false" group="编辑验证" id="editverifyRequired" name="必填" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
             </form:attributes>
           </form:control>
           <form:validation/>
@@ -612,6 +616,10 @@
                 <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
                 <dync:children/>
               </dync:attribute>
+              <dync:attribute default="false" group="编辑验证" id="editverifyRequired" name="必填" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
             </form:attributes>
           </form:control>
         </form:child>
@@ -619,6 +627,10 @@
           <form:control type="widget/col_jqgrid">
             <form:attributes source="widget/col_jqgrid">
               <dync:attribute default="false" group="编辑" id="editable" name="启用编辑" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
+              <dync:attribute default="false" group="编辑验证" id="editverifyRequired" name="必填" value="true">
                 <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
                 <dync:children/>
               </dync:attribute>
@@ -643,6 +655,10 @@
                 <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
                 <dync:children/>
               </dync:attribute>
+              <dync:attribute default="false" group="编辑验证" id="editverifyRequired" name="必填" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
             </form:attributes>
           </form:control>
         </form:child>
@@ -660,6 +676,10 @@
           <form:control type="widget/col_jqgrid">
             <form:attributes source="widget/col_jqgrid">
               <dync:attribute default="false" group="编辑" id="editable" name="启用编辑" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
+              <dync:attribute default="false" group="编辑验证" id="editverifyRequired" name="必填" value="true">
                 <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
                 <dync:children/>
               </dync:attribute>
@@ -706,6 +726,12 @@
             </dync:attribute>
             <dync:attribute default="false" group="高级功能" id="inlineEditAutoSave" name="行内编辑自动保存" value="true">
               <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+              <dync:children/>
+            </dync:attribute>
+            <dync:attribute default="" group="加载事件" id="loadComplete" name="请求完成后" value="accountlist_loadComplete(data)">
+              <dync:render colSpan="1" height="0" multi="false" name="event">
+                <dync:item name="param" value="data"/>
+              </dync:render>
               <dync:children/>
             </dync:attribute>
           </form:attributes>
@@ -778,7 +804,7 @@
             </form:child>
           </form:child>
         </form:child>
-        <form:child xsi:type="form:Field" binding="id" id="id" name="id" customize="true">
+        <form:child xsi:type="form:Field" binding="idcrm" id="idcrm" name="idcrm" customize="true">
           <form:control type="widget/col_jqgrid">
             <form:attributes source="widget/col_jqgrid">
               <dync:attribute default="false" group="表格设置" id="hidden" name="隐藏列" value="true">
@@ -845,6 +871,10 @@
                 <dync:render colSpan="1" height="0" multi="false" name="text"/>
                 <dync:children/>
               </dync:attribute>
+              <dync:attribute default="false" group="编辑验证" id="editverifyRequired" name="必填" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
             </form:attributes>
           </form:control>
           <form:validation/>
@@ -870,6 +900,10 @@
                 <dync:render colSpan="1" height="0" multi="false" name="text"/>
                 <dync:children/>
               </dync:attribute>
+              <dync:attribute default="false" group="编辑验证" id="editverifyRequired" name="必填" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
             </form:attributes>
           </form:control>
           <form:validation/>
@@ -878,6 +912,10 @@
           <form:control type="widget/col_jqgrid">
             <form:attributes source="widget/col_jqgrid">
               <dync:attribute default="false" group="编辑" id="editable" name="启用编辑" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
+              <dync:attribute default="false" group="编辑验证" id="editverifyRequired" name="必填" value="true">
                 <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
                 <dync:children/>
               </dync:attribute>
@@ -892,6 +930,10 @@
                 <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
                 <dync:children/>
               </dync:attribute>
+              <dync:attribute default="false" group="编辑验证" id="editverifyRequired" name="必填" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
             </form:attributes>
           </form:control>
           <form:validation/>
@@ -901,6 +943,31 @@
             <form:attributes source="widget/col_jqgrid">
               <dync:attribute default="false" group="编辑" id="editable" name="启用编辑" value="true">
                 <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
+              <dync:attribute default="false" group="编辑验证" id="editverifyRequired" name="必填" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
+              <dync:attribute default="custom" group="编辑验证" id="valitype" name="数据验证" value="number">
+                <dync:render colSpan="2" height="0" multi="false" name="select">
+                  <dync:item name="自定义" value="custom"/>
+                  <dync:item name="数字" value="number"/>
+                  <dync:item name="中文" value="zhCn"/>
+                  <dync:item name="手机号" value="mobile"/>
+                  <dync:item name="QQ" value="qq"/>
+                  <dync:item name="身份证" value="idCard"/>
+                  <dync:item name="邮箱" value="email"/>
+                  <dync:item name="URL" value="url"/>
+                </dync:render>
+                <dync:children/>
+              </dync:attribute>
+              <dync:attribute default="" group="编辑验证" id="editverifyRegExp" name="正则表达式" value="^[0-9]*$">
+                <dync:render colSpan="1" height="0" multi="false" name="text"/>
+                <dync:children/>
+              </dync:attribute>
+              <dync:attribute default="" group="编辑验证" id="editverifyRegExpMessage" name="正则错误信息" value="数字格式不正确!">
+                <dync:render colSpan="1" height="0" multi="false" name="text"/>
                 <dync:children/>
               </dync:attribute>
             </form:attributes>
@@ -914,6 +981,10 @@
                 <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
                 <dync:children/>
               </dync:attribute>
+              <dync:attribute default="false" group="编辑验证" id="editverifyRequired" name="必填" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
             </form:attributes>
           </form:control>
           <form:validation/>
@@ -922,6 +993,10 @@
           <form:control type="widget/col_jqgrid">
             <form:attributes source="widget/col_jqgrid">
               <dync:attribute default="false" group="编辑" id="editable" name="启用编辑" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
+              <dync:attribute default="false" group="编辑验证" id="editverifyRequired" name="必填" value="true">
                 <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
                 <dync:children/>
               </dync:attribute>
@@ -1392,7 +1467,6 @@ page_onload:function(){
 		 account_rules[0]={field:&quot;lineid&quot;,op:&quot;eq&quot;,data:$params.info.shipperId};
 		var filters={ groupOp:&quot;AND&quot;, rules:account_rules};
 		$view.accountlist.refresh({filters:filters});
-		$params.idi = 1;
 },
 
 button_click:function($event){
@@ -1487,8 +1561,14 @@ button5_click:function($event){
 	var listAccountList = $view.accountlist.getRowData();
 	var accountList = new Array();
 	for(var i in listAccountList ){
-		var id = listAccountList[i].id;
+		var id = listAccountList[i].idcrm;
 		var pathid = id+'path';
+		if($(&quot;#&quot;+pathid).text()==&quot;上传后显示&quot;){
+			Messenger.post({message:&quot;账户信息中有银行卡照片未上传！&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});
+			return;
+		}
+		listAccountList[i].accountFilepath = $(&quot;#&quot;+pathid).text();
+		listAccountList[i].id = listAccountList[i].idcrm;
 		accountList[i] = listAccountList[i];
 	}
 	//$params.info=shippperid;
@@ -1525,10 +1605,18 @@ buttonAccountUp_click:function($event){
 	var listAccountList = $view.accountlist.getRowData();
 	var accountList = new Array();
 	for(var i in listAccountList ){
-		var id = listAccountList[i].id;
+		var id = listAccountList[i].idcrm;
 		var pathid = id+'path';
+		//alert($(&quot;#&quot;+pathid).text()==&quot;上传后显示&quot;);
+		if($(&quot;#&quot;+pathid).text()==&quot;上传后显示&quot;){
+			Messenger.post({message:&quot;账户信息中有银行卡照片未上传！&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});
+			return;
+		}
+		listAccountList[i].accountFilepath = $(&quot;#&quot;+pathid).text();
+		listAccountList[i].id = listAccountList[i].idcrm;
 		accountList[i] = listAccountList[i];
 	}
+	alert($params.info.shipperId);
 	Messenger.post({message:&quot;正在提交&quot;,type:&quot;info&quot;,hideAfter:2,showCloseButton:true});
 	$http.post(&quot;ws/s_updateaccount2Crm&quot;,{listAccountList:accountList,&quot;cusdmid&quot;:$params.info.shipperId})
 				.success(function(data){
@@ -1658,11 +1746,11 @@ buttonAccountDel_click:function(rowId,rowData,tableData){
 	Modal.openConfirm({message:&quot;是否确认删除?&quot;},function($params){
 		var arr=new Array();
 		for(var i=0, j=0;i&lt;data.length;i++){	
-		if(data[i].id==undefined||data[i].id==&quot;&quot;)
+		if(data[i].customerId==undefined||data[i].customerId==&quot;&quot;)
 		{	
 			continue;
 		}
-		arr[j]=data[i].id;
+		arr[j]=data[i].idcrm;
 		j++;
 		}
 		for(var k=0;k&lt;data.length;k++){
@@ -1679,7 +1767,7 @@ buttonAccountDel_click:function(rowId,rowData,tableData){
 
 buttonAccountAdd_click:function(rowId,rowData,tableData){
 	var ite = &quot;scoy&quot;+$params.idi;
-	$view.accountlist.addRowData(null,{id:ite},&quot;last&quot;,null);
+	$view.accountlist.addRowData($params.idi,{idcrm:ite},&quot;last&quot;,null);
 	$params.idi++;
 },
 
@@ -1687,7 +1775,7 @@ tableButton_customFormatter:function(cellvalue,options,rowObject,dictValueExpres
 	 return &quot;&lt;button ng-click='functions.print(rowObject)'>上传银行卡照片&lt;/button>&quot;;
 },
 print:function(rowObject){
-	var i = rowObject.id
+	var i = rowObject.idcrm;
 	var pathid = i+&quot;path&quot;; 
 	Modal.open(&quot;f/accountFileUp&quot;,{},function(id){
 		$(&quot;#&quot;+pathid).text(id);
@@ -1698,7 +1786,7 @@ buttonFile_customFormatter:function(cellvalue,options,rowObject,dictValueExpress
 	return &quot;&lt;button ng-click='functions.view(rowObject)'>预览照片&lt;/button>&quot;;
 },
 view:function(rowObject){
-	var i = rowObject.id;
+	var i = rowObject.idcrm;
 	var pathid = i+&quot;path&quot;;
 	var urr = $(&quot;#&quot;+pathid).text();
 	Modal.open(&quot;f/fileView&quot;,{&quot;url&quot;:urr},function(){
@@ -1706,7 +1794,15 @@ view:function(rowObject){
 },
 
 accountFilepath_customFormatter:function(cellvalue,options,rowObject,dictValueExpression){
-	var i = rowObject.id;
+	var i = rowObject.idcrm;
+	if(rowObject.accountFilepath == undefined){
+		rowObject.accountFilepath = &quot;上传后显示&quot;;
+	}
 	return '&lt;span id=&quot;'+i+'path&quot;>'+rowObject.accountFilepath+'&lt;/span>'
+},
+
+accountlist_loadComplete:function(data){
+	var accountlength = $view.accountlist.getRowData();
+	$params.idi = accountlength.length+1;
 }</form:scripts>
 </form:Form>
