--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_supplierApplay.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_supplierApplay.form
@@ -495,10 +495,6 @@
                   <dync:render colSpan="1" height="0" multi="false" name="text"/>
                   <dync:children/>
                 </dync:attribute>
-                <dync:attribute default="dbdir" group="HTML属性" id="process" name="上传处理器" value="dir">
-                  <dync:render colSpan="1" height="0" multi="false" name="text"/>
-                  <dync:children/>
-                </dync:attribute>
               </form:attributes>
             </form:control>
             <form:validation/>
@@ -1127,12 +1123,7 @@
       </form:child>
       <form:child xsi:type="form:Field" binding="lineid" id="lineid" name="区分列" customize="true">
         <form:control type="widget/col_jqgrid">
-          <form:attributes source="widget/col_jqgrid">
-            <dync:attribute default="false" group="表格设置" id="hidden" name="隐藏列" value="true">
-              <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
-              <dync:children/>
-            </dync:attribute>
-          </form:attributes>
+          <form:attributes source="widget/col_jqgrid"/>
         </form:control>
         <form:validation/>
       </form:child>
